app/assets/stylesheets/pages.scss
/* Variables, fonts */
@import url(http://fonts.googleapis.com/css?family=Open+Sans:300|Dancing+Script:700|Oswald:700);
$title-font-stack: "Dancing Script", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
$sub-heading-font-stack: "Oswald", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;

$off-white: #FFFAEE;

/* Global styles */
html, body {
  width: 100%;
  height: 100%;
}

#wrapper {
  background: #FFFAEE;
}

#content {
  max-width: none;
  padding: 3rem;
}

.center-vertical {
  display: table-cell;
  vertical-align: middle;
}

.full-height {
  height: 100vh;
}

.button {
  font-size: 1.3rem;
}

.row.summary {
  margin-bottom: 3rem;
}

/* Menu link */
#open-left {
  position: fixed;
  top: 1.5rem;
  left: 1.5rem;
  font-size: 1.6rem;
  background: rgba(0, 0, 0, .4);
  color: #fff;
  border-radius: 4px;
  padding: .1rem .8rem;
  z-index: 999;
  opacity: 1;
  visibility: visible;
  -webkit-transition: visibility 0s ease-out 0.3s, opacity 0.3s linear;
     -moz-transition: visibility 0s ease-out 0.3s, opacity 0.3s linear;
      -ms-transition: visibility 0s ease-out 0.3s, opacity 0.3s linear;
       -o-transition: visibility 0s ease-out 0.3s, opacity 0.3s linear;
          transition: visibility 0s ease-out 0.3s, opacity 0.3s linear;
  transition-delay: 0s;
}
.snapjs-left #open-left { opacity: 0; visibility: hidden; }

/* Sidebar */
.snap-drawer-left {
  padding: 1rem;
  background: #1B1B1B;
  -moz-box-shadow:    inset 0 0 10px #000000;
  -webkit-box-shadow: inset 0 0 10px #000000;
  box-shadow:         inset 0 0 10px #000000;

  h3 {
    color: #FFFAEE;
    text-align: center;
    padding-bottom: 0.7rem;
    // border-bottom: 1px solid rgba(255, 255, 255, 0.1);
  }

  ul {
    list-style-type: none;
    margin: 0;
    text-align: center;
  }

  li {
    a {
      display: block;
      padding: 1rem;
      border-top: 1px solid rgba(255, 255, 255, 0.1);
      border-bottom: 1px solid rgba(0,0,0, 0.1);
      font-size: 1.2rem;
      color: #FFFAEE;
    }
  }
}

/* Landing */
#landing {
  text-align: center;
  width: 100%;
  height: 100vh;
  position: relative;

  #background {
    width: 100%;
    height: 100%;
    background: image-url('BGedit.png');
    background-size: cover;
    position: absolute;
    top: 0;
    left: 0;
  }

  .container {
    display: table;
    width: 100%;
    height: 100%;
  }

  .heading {
    padding: 2rem 3rem;
    color: white;
  }

  #title {
    margin: 0 0 -0.5rem;
    font-size: 8rem;
    font-family: $title-font-stack;
    color: $off-white;
  }

  #tagline {
    font-size: 1.4rem;
    margin: 0 0 2rem;
  }
}

/* Media queries */
@media only screen and (max-width: 40em) {
  .button {
    font-size: 1rem;
  }

  #open-left {
    display: none;
  }

  #landing {
    #background {
      background: image-url('BGedit-small.png');
      background-position: 40% 20%;
    }

    .heading {
      padding: 1rem;
    }

    #title {
      font-size: 2.3rem;
      margin: 0;
    }
    
    #tagline {
      font-size: 0.8rem;
    }
  }
}

